--- a/Views/ProductOverviewWindow.xaml
+++ b/Views/ProductOverviewWindow.xaml
@@ -20,22 +20,68 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dg3" AutoGenerateColumns="False" ItemsSource="{Binding Product}" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="4" FontSize="15" >
+        
+        <!-- Таблица: Список товаров по имени -->
+        <DataGrid x:Name="ProductNameGrid" 
+                  AutoGenerateColumns="False" 
+                  ItemsSource="{Binding Product}" 
+                  Grid.Column="0" 
+                  Grid.Row="0" 
+                  Grid.ColumnSpan="2" 
+                  Grid.RowSpan="4" 
+                  FontSize="15">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="наименование" Binding="{ Binding Path= Name}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="цена" Binding="{ Binding Path= Price}" Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Наименование" 
+                                    Binding="{Binding Path=Name}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Цена" 
+                                    Binding="{Binding Path=Price}" 
+                                    Width="200"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid x:Name="dg4" AutoGenerateColumns="False" ItemsSource="{Binding Product}" Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="4" FontSize="15">
+        
+        <!-- Таблица: Детали товаров -->
+        <DataGrid x:Name="ProductDetailsGrid" 
+                  AutoGenerateColumns="False" 
+                  ItemsSource="{Binding Product}" 
+                  Grid.Column="3" 
+                  Grid.Row="0" 
+                  Grid.ColumnSpan="2" 
+                  Grid.RowSpan="4" 
+                  FontSize="15">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="название" Binding="{ Binding Path= Name}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="ед/изм" Binding="{ Binding Path= Unit.Name}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="категория" Binding="{ Binding Path= Category.Name}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="цена" Binding="{ Binding Path= Price}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="количесвто" Binding="{ Binding Path= Qty}" Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Название" 
+                                    Binding="{Binding Path=Name}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Ед/изм" 
+                                    Binding="{Binding Path=Unit.Name}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Категория" 
+                                    Binding="{Binding Path=Category.Name}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Цена" 
+                                    Binding="{Binding Path=Price}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Количество" 
+                                    Binding="{Binding Path=Qty}" 
+                                    Width="200"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="2" Grid.Column="2" Content="Назад" FontSize="24" Grid.RowSpan="2" Click="Button_Click_1"></Button>
-        <Button Grid.Row="0" Grid.Column="2" Content="Заполнить таблицу" FontSize="22" Grid.RowSpan="2" Click="Button_Click"></Button>
+        
+        <Button Grid.Row="2" 
+                Grid.Column="2" 
+                x:Name="BackButton" 
+                Content="Назад" 
+                FontSize="24" 
+                Grid.RowSpan="2" 
+                Click="GoToAdmin"></Button>
+                
+        <Button Grid.Row="0" 
+                Grid.Column="2" 
+                x:Name="LoadDetailsButton" 
+                Content="Заполнить таблицу" 
+                FontSize="22" 
+                Grid.RowSpan="2" 
+                Click="LoadProductDetails"></Button>
     </Grid>
 </Window>
