--- a/Views/Reports/IncomingGoodsJournalWindow.xaml
+++ b/Views/Reports/IncomingGoodsJournalWindow.xaml
@@ -20,15 +20,43 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dg5" AutoGenerateColumns="False" ItemsSource="{Binding Privoz}" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="4" FontSize="15">
+        
+        <DataGrid x:Name="GoodsReceiptsGrid" 
+                  AutoGenerateColumns="False" 
+                  ItemsSource="{Binding Supplies}" 
+                  Grid.Column="0" 
+                  Grid.Row="0" 
+                  Grid.ColumnSpan="4" 
+                  Grid.RowSpan="4" 
+                  FontSize="15">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="дата" Binding="{ Binding Path= Data}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="наименование" Binding="{ Binding Path= Name}" Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="количество" Binding="{ Binding Path= Qty}" Width="120"></DataGridTextColumn>
-                <DataGridTextColumn Header="цена" Binding="{ Binding Path= Price}" Width="120"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата" 
+                                    Binding="{Binding Path=Date}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Наименование" 
+                                    Binding="{Binding Path=Name}" 
+                                    Width="200"></DataGridTextColumn>
+                <DataGridTextColumn Header="Количество" 
+                                    Binding="{Binding Path=Amount}" 
+                                    Width="120"></DataGridTextColumn>
+                <DataGridTextColumn Header="Цена" 
+                                    Binding="{Binding Path=Price}" 
+                                    Width="120"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="nazad" Content="Назад" FontSize="24" Grid.Row="3" Grid.Column="5" ></Button>
-        <Button x:Name="viv_v_excel" Content="Ввод данных" FontSize="24" Grid.Row="2" Grid.Column="5" Click="ExportToExcelButton_Click"></Button>
+        
+        <Button x:Name="BackButton" 
+                Content="Назад" 
+                FontSize="24" 
+                Grid.Row="3" 
+                Grid.Column="4" 
+                Click="BackButton_Click"></Button>
+                
+        <Button x:Name="ExportToExcelButton" 
+                Content="Вывод в Excel" 
+                FontSize="24" 
+                Grid.Row="2" 
+                Grid.Column="4" 
+                Click="ExportToExcel"></Button>
     </Grid>
 </Window>
