--- a/Views/Reports/IncomingGoodsJournalWindow.xaml
+++ b/Views/Reports/IncomingGoodsJournalWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zoomag"
         mc:Ignorable="d"
-        Title="Журнал поступления товаров" Height="450" Width="800">
+        Title="Журнал поступления товаров" Height="450" Width="1100">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -20,43 +20,50 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <DataGrid x:Name="GoodsReceiptsGrid" 
-                  AutoGenerateColumns="False" 
-                  ItemsSource="{Binding Supplies}" 
-                  Grid.Column="0" 
-                  Grid.Row="0" 
-                  Grid.ColumnSpan="4" 
-                  Grid.RowSpan="4" 
-                  FontSize="15">
+
+        <DataGrid x:Name="GoodsReceiptsGrid"
+                  AutoGenerateColumns="False"
+                  Grid.Column="0"
+                  Grid.Row="0"
+                  Grid.ColumnSpan="4"
+                  Grid.RowSpan="4"
+                  FontSize="15"
+                  IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Дата" 
-                                    Binding="{Binding Path=Date}" 
-                                    Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="Наименование" 
-                                    Binding="{Binding Path=Name}" 
-                                    Width="200"></DataGridTextColumn>
-                <DataGridTextColumn Header="Количество" 
-                                    Binding="{Binding Path=Amount}" 
-                                    Width="120"></DataGridTextColumn>
-                <DataGridTextColumn Header="Цена" 
-                                    Binding="{Binding Path=Price}" 
-                                    Width="120"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата"
+                                    Binding="{Binding Path=SupplyDate, StringFormat=d}"
+                                    Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Наименование"
+                                    Binding="{Binding Path=ProductName}"
+                                    Width="250"></DataGridTextColumn>
+                <DataGridTextColumn Header="Количество"
+                                    Binding="{Binding Path=Quantity, StringFormat=N2}"
+                                    Width="80"></DataGridTextColumn>
+                <DataGridTextColumn Header="Цена"
+                                    Binding="{Binding Path=Price, StringFormat=C2}"
+                                    Width="100"></DataGridTextColumn>
+                <!-- Исправленный столбец "Общая сумма" -->
+                <DataGridTextColumn Header="Общая сумма"
+                                    Width="120">
+                    <DataGridTextColumn.Binding>
+                        <Binding Path="Total" StringFormat="C2" Mode="OneTime" />
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        
-        <Button x:Name="BackButton" 
-                Content="Назад" 
-                FontSize="24" 
-                Grid.Row="3" 
-                Grid.Column="4" 
+
+        <Button x:Name="BackButton"
+                Content="Назад"
+                FontSize="24"
+                Grid.Row="3"
+                Grid.Column="4"
                 Click="BackButton_Click"></Button>
-                
-        <Button x:Name="ExportToExcelButton" 
-                Content="Вывод в Excel" 
-                FontSize="24" 
-                Grid.Row="2" 
-                Grid.Column="4" 
+
+        <Button x:Name="ExportToExcelButton"
+                Content="Вывод в Excel"
+                FontSize="24"
+                Grid.Row="2"
+                Grid.Column="4"
                 Click="ExportToExcel"></Button>
     </Grid>
 </Window>
