--- a/Views/Reports/CategoryReportWindow.xaml
+++ b/Views/Reports/CategoryReportWindow.xaml
@@ -6,65 +6,56 @@
         xmlns:local="clr-namespace:Zoomag"
         mc:Ignorable="d"
         Title="Отчет по категориям" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        
+    <!-- Используем DockPanel для более логичной раскладки -->
+    <DockPanel>
+        <!-- Правая панель для кнопок и комбобокса -->
+        <StackPanel DockPanel.Dock="Right" 
+                    Width="200" 
+                    Margin="10"> <!-- Отступ слева от DataGrid -->
+            <Label Content="Выберите категорию:" 
+                   FontSize="14" 
+                   Margin="0,0,0,5"/> <!-- Подпись для ComboBox -->
+            <ComboBox x:Name="CategorySelector" 
+                      Margin="0,0,0,10" 
+                      SelectionChanged="OnCategoryChanged"/>
+
+            <Button x:Name="ExportToExcelButton" 
+                    Content="Вывод в Excel" 
+                    FontSize="16" 
+                    Margin="0,0,0,5" 
+                    Padding="10,5" 
+                    Click="ExportToExcel"/>
+            <Button x:Name="BackButton" 
+                    Content="Назад" 
+                    FontSize="16" 
+                    Padding="10,5" 
+                    Click="GoToAdmin"/>
+        </StackPanel>
+
+        <!-- Центральный элемент - DataGrid -->
         <DataGrid x:Name="CategoryProductsGrid" 
                   AutoGenerateColumns="False" 
                   ItemsSource="{Binding Privoz}" 
-                  Grid.Column="0" 
-                  Grid.Row="0" 
-                  Grid.ColumnSpan="4" 
-                  Grid.RowSpan="4" 
-                  FontSize="15">
+                  FontSize="14" 
+                  Margin="10,10,0,10"> <!-- Отступы вокруг DataGrid -->
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Наименование" 
                                     Binding="{Binding Path=Name}" 
-                                    Width="150"></DataGridTextColumn>
+                                    Width="*"/> <!-- "*" позволяет колонке занимать доступное пространство -->
                 <DataGridTextColumn Header="Ед/изм" 
                                     Binding="{Binding Path=Unit.Name}" 
-                                    Width="100"></DataGridTextColumn>
+                                    Width="80"/>
+                <!-- Исправлено: используем Amount вместо несуществующего Qty -->
                 <DataGridTextColumn Header="Количество" 
-                                    Binding="{Binding Path=Qty}" 
-                                    Width="150"></DataGridTextColumn>
+                                    Binding="{Binding Path=Amount}" 
+                                    Width="100"/>
                 <DataGridTextColumn Header="Цена" 
                                     Binding="{Binding Path=Price}" 
-                                    Width="150"></DataGridTextColumn>
+                                    Width="100"/>
                 <DataGridTextColumn Header="Категория" 
                                     Binding="{Binding Path=Category.Name}" 
-                                    Width="100"></DataGridTextColumn>
+                                    Width="100"/>
             </DataGrid.Columns>
         </DataGrid>
-        
-        <Button x:Name="BackButton" 
-                Content="Назад" 
-                FontSize="24" 
-                Grid.Row="3" 
-                Grid.Column="4" 
-                Click="GoToAdmin"></Button>
-                
-        <Button x:Name="ExportToExcelButton" 
-                Content="Вывод в Excel" 
-                FontSize="24" 
-                Grid.Row="2" 
-                Grid.Column="4" 
-                Click="ExportToExcel"></Button>
-                
-        <ComboBox x:Name="CategorySelector" 
-                  Grid.Row="1" 
-                  Grid.Column="4" 
-                  SelectionChanged="OnCategoryChanged"></ComboBox>
-    </Grid>
+    </DockPanel>
 </Window>
